# Makefile for xflow library
# (c) 2002-2006 D.Béréziat
# $Id: Makefile.am,v 1.6 2010/01/24 22:08:21 bereziat Exp $

INCLUDES = -I..
# sources de libxflow.a
libxflow_a_SOURCES = xflow_close.c  xflow_get.c  xflow_open.c  xflow_read.c  \
	xflow_read_value.c  xflow_seek.c  xflow_write.c  xflow_write_value.c \
	xflow_set.c xflow_create.c 

# liste des libraries a construire
lib_LIBRARIES = libxflow.a


